[package]
name = "test_csv"
version = "0.1.0"
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
stopwatch = "*"
serde = { version = "1.0", features = ["derive"] }